tests/fixtures/invalid/primitive_typo_boolean.avsc
{
  "type": "record",
  "name": "TestBooleanTypo",
  "fields": [
    {
      "name": "flag",
      "type": {
        "type": "boolena"
      }
    }
  ]
}
